# AI-Studio-Framework

./: AI Studio Framework - Software Architecture Specification v1.0.docx  AI Studio Framework — Software Architecture Specification v1.0.txt  README.md  Software Architecture Specification v1.0.txt  pyproject.toml  Версия 2.0.docx  Начало.docx  Структура каталогов.txt
ai_studio_framework.egg-info/: PKG-INFO  SOURCES.txt
scripts/: test_registry.py
src/agents/: base.py  developer_agent.py  echo_agent.py  pm_agent.py
src/core/: config.py  orchestrator.py  registry.py  router.py
src/memory/: context_manager.py
src/providers/: base_provider.py  gigachat_provider.py
